--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
 
     <div class="header">
         home page <br>
-       <a href='pages/page2.html'> page 2  </a>  <a href='pages/page3.html'> page 3  </a>
+       <a href='page2.html'> page 2  </a>  <a href='page3.html'> page 3  </a>
     </div>
     <div class="sidebar">
 
