--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 
     <!-- style sheets -->
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="../css/home.css">
 
 
     <!-- jquery -->
@@ -18,20 +18,32 @@
 <body>
 
     <div class="header">
-        home page <br>
-       <a href='page2.html'> page 2  </a>  <a href='page3.html'> page 3  </a>
+        <div class="navbar">
+            <a href="#home">Home</a>
+            <a href="#news">News</a>
+            <div class="dropdown">
+              <button class="dropbtn">Dropdown
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
+          </div>
     </div>
     <div class="sidebar">
 
     </div>
     <div class="content">
-        <div id="map"></div>
+
     </div>
     <div class="footer">
         
     </div>
 
-    <script src="js/home.js"></script>
+    <script src="../js/home.js"></script>
 
 </body>
 
