--- a/pages/home.html
+++ b/pages/home.html
@@ -19,22 +19,45 @@
 
     <div class="header">
         <div class="navbar">
-            <a href="#home">Home</a>
-            <a href="#news">News</a>
+            <a href="home.html">Home</a>
+            <a href="page2.html">Data</a>
+            <a href="page3.html">Map</a>
+            <a href="page4.html">Map 2</a>
             <div class="dropdown">
-              <button class="dropbtn">Dropdown
+                <button class="dropbtn">Make a Difference
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Current Legislation</a>
+                  <a href="#">Other Organizations</a>
+                  <a href="#">What Next?</a>
+                </div>
+              </div>
+            <div class="dropdown">
+              <button class="dropbtn">About
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Meet the Team</a>
+                <a href="#">About the Project</a>
+                <a href="#">Map Instructions</a>
               </div>
             </div>
           </div>
     </div>
-    <div class="sidebar">
 
+    <div class="content">
+
+    Whatever we want to put here.
+    </div>
+
+    <div class="sidebar">
+<h1>Home Page</h1>
+<p>Some text for the home page
+    etc etc etc etc etc etc etc etc etc
+</p>
+<br>
+<button class="button" type="button">Get Started</button>
     </div>
     <div class="content">
 
