--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="header">
-        <a id='nav' href='pages/home.html'> home </a> <a id='nav' href='pages/page2.html'> page 2 </a>
+        <a id='nav' href='pages/home.html'> home </a> <a id='nav' href='pages/micro.html'> page 2 </a>
         <a id='nav' href='pages/page3.html'> page 3 </a>
     </div>
     <div class="content">
