--- a/pages/micro.html
+++ b/pages/micro.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>home page</title>
+    <title>The Effects of Microplastics</title>
     <meta charset="utf-8" />
 
     <!-- style sheets -->
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/micro.css">
 
 
     <!-- jquery -->
@@ -18,6 +18,7 @@
 <body>
 
     <div class="header">
+        The Effects of Microplastics
         <div class="navbar">
             <a href="home.html">Home</a>
             <a href="micro.html">Microplastics</a>
@@ -45,28 +46,24 @@
             </div>
           </div>
     </div>
-
+   
     <div class="content">
-
-    Whatever we want to put here.
+        <div id='picCntnr'>
+            <p>
+                <img src= "../photos/micro.jpg" id = 'pic'>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                 Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
+                  vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, 
+                  ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum 
+                  augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis
+                   in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue.
+                    Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
+            </p>
+        </div>
     </div>
+   
 
-    <div class="sidebar">
-<h1>Home Page</h1>
-<p>Some text for the home page
-    etc etc etc etc etc etc etc etc etc
-</p>
-<br>
-<button class="button" type="button">Get Started</button>
-    </div>
-    <div class="content">
-
-    </div>
-    <div class="footer">
-        
-    </div>
-
-    <script src="../js/home.js"></script>
+    <script src="../js/p2.js"></script>
 
 </body>
 
