--- a/pages/micro.html
+++ b/pages/micro.html
@@ -29,7 +29,7 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                  <a href="#">Current Legislation</a>
+                  <a href="leg.html">Current Legislation</a>
                   <a href="#">Other Organizations</a>
                   <a href="#">What Next?</a>
                 </div>
