--- a/pages/leg.html
+++ b/pages/leg.html
@@ -38,7 +38,7 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">Meet the Team</a>
+                    <a href="team.html">Meet the Team</a>
                     <a href="#">About the Project</a>
                     <a href="#">Map Instructions</a>
                 </div>
