--- a/pages/home.html
+++ b/pages/home.html
@@ -2,71 +2,100 @@
 <html>
 
 <head>
-    <title>home page</title>
-    <meta charset="utf-8" />
+  <title>home page</title>
+  <meta charset="utf-8" />
 
-    <!-- style sheets -->
-    <link rel="stylesheet" href="../css/home.css">
+  <!-- style sheets -->
+  <link rel="stylesheet" href="../css/home.css">
 
 
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-    <div class="header">
-        <div class="navbar">
-            <a href="home.html">Home</a>
-            <a href="micro.html">Microplastics</a>
-            <a href="page3.html">Map</a>
-            <a href="vessel.html">Fishing Vessels</a>
-            <div class="dropdown">
-                <button class="dropbtn">Make a Difference
-                  <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                  <a href="leg.html">Current Legislation</a>
-                  <a href="#">Other Organizations</a>
-                  <a href="#">What Next?</a>
-                </div>
-              </div>
-            <div class="dropdown">
-              <button class="dropbtn">About
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                <a href="team.html">Meet the Team</a>
-                <a href="#">About the Project</a>
-                <a href="#">Map Instructions</a>
-              </div>
-            </div>
-          </div>
+  <div class="header">
+    <div class="navbar">
+      <a href="home.html">Home</a>
+      <a href="micro.html">Microplastics</a>
+      <a href="page3.html">Map</a>
+      <a href="vessel.html">Fishing Vessels</a>
+      <div class="dropdown">
+        <button class="dropbtn">Make a Difference
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="leg.html">Current Legislation</a>
+          <a href="#">Other Organizations</a>
+          <a href="#">What Next?</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">About
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="team.html">Meet the Team</a>
+          <a href="#">About the Project</a>
+          <a href="#">Map Instructions</a>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="content">
+  <div class="content">
 
-    Whatever we want to put here.
+    <div class='tableauPlaceholder' id='viz1619934658697' style='position: relative'>
+      <noscript><a href='#'><img alt='Map and Graphs by Year '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;6F&#47;6FishingBoatsVisualized2012-2020&#47;MapandGraphsbyYear&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='6FishingBoatsVisualized2012-2020&#47;MapandGraphsbyYear' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;6F&#47;6FishingBoatsVisualized2012-2020&#47;MapandGraphsbyYear&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en' />
+      </object>
     </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1619934658697');
+      var vizElement = divElement.getElementsByTagName('object')[0];
+      if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; }
+      else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; }
+      else { vizElement.style.width = '100%'; vizElement.style.height = '777px'; }
+      var scriptElement = document.createElement('script');
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+  </div>
 
-    <div class="sidebar">
-<h1>Home Page</h1>
-<p>Some text for the home page
-    etc etc etc etc etc etc etc etc etc
-</p>
-<br>
-<button class="button" type="button">Get Started</button>
-    </div>
-    <div class="content">
+  <div class="sidebar">
+    <h1>Home Page</h1>
+    <p>Some text for the home page
+      etc etc etc etc etc etc etc etc etc
+    </p>
+    <br>
+    <button class="button" type="button">Get Started</button>
+  </div>
+  <div class="content">
 
-    </div>
-    <div class="footer">
-        
-    </div>
+  </div>
+  <div class="footer">
 
-    <script src="../js/home.js"></script>
+  </div>
+
+  <script src="../js/home.js"></script>
 
 </body>
 
