added plastic cluster layer

--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -13,6 +13,9 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-responsive-popup@0.6.4/leaflet.responsive.popup.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet-responsive-popup@0.6.4/leaflet.responsive.popup.css" />
+  <script src= "https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+  <link rel= "stylesheet" href = "https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
+  <link rel= "stylesheet" href = "https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
 
   <!-- papaparse-->
   <script src="../js/papaparse.min.js"></script>
@@ -62,7 +65,7 @@
   </div>
 
   <div class="content">
-    <div class='tableauPlaceholder' id='viz1619934712036' style='position: relative'><noscript><a href='#'><img
+    <!-- <div class='tableauPlaceholder' id='viz1619934712036' style='position: relative'><noscript><a href='#'><img
             alt='Overall Map '
             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;6F&#47;6FishingBoatsVisualized2012-2020&#47;OverallMap&#47;1_rss.png'
             style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -94,8 +97,8 @@
       } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
-    <!-- <div id="map"></div> -->
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);</script> -->
+    <div id="map"></div>
   </div>
 
   <div class="text">
@@ -109,7 +112,7 @@
       Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
     </p>
   </div>
-  <!-- <script  src="../js/vessel.js"></script> -->
+  <script  src="../js/vessel.js"></script>
 
 </body>
 
