--- a/pages/leg.html
+++ b/pages/leg.html
@@ -19,32 +19,31 @@
 
     <div class="header">
         <div class="navbar">
-            <a href="home.html">Home</a>
-            <a href="micro.html">Microplastics</a>
-            <a href="page3.html">Map</a>
-            <a href="vessel.html">Fishing Vessels</a>
-            <div class="dropdown">
-                <button class="dropbtn">Make a Difference
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="leg.html">Current Legislation</a>
-                    <a href="#">Other Organizations</a>
-                    <a href="#">What Next?</a>
-                </div>
+          <a href="../home.html">Home</a>
+          <a href="micro.html">Microplastics</a>
+          <a href="data.html">Data</a>
+          <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
+          <div class="dropdown">
+            <button class="dropbtn">Make a Difference
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="leg.html">Current Legislation</a>
+              <a href="#">Other Organizations</a>
+              <a href="#">What Next?</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">About
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="team.html">Meet the Team</a>
-                    <a href="#">About the Project</a>
-                    <a href="#">Map Instructions</a>
-                </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">About
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="team.html">Meet the Team</a>
+              <a href="#">About the Project</a>
+              <a href="#">Map Instructions</a>
             </div>
+          </div>
         </div>
-    </div>
 
 
     <div class="content">
