--- a/pages/team.html
+++ b/pages/team.html
@@ -14,32 +14,31 @@
 
     <div class="header">
         <div class="navbar">
-            <a href="home.html">Home</a>
-            <a href="micro.html">Microplastics</a>
-            <a href="page3.html">Map</a>
-            <a href="vessel.html">Fishing Vessels</a>
-            <div class="dropdown">
-                <button class="dropbtn">Make a Difference
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="leg.html">Current Legislation</a>
-                    <a href="#">Other Organizations</a>
-                    <a href="#">What Next?</a>
-                </div>
+          <a href="../home.html">Home</a>
+          <a href="micro.html">Microplastics</a>
+          <a href="data.html">Data</a>
+          <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
+          <div class="dropdown">
+            <button class="dropbtn">Make a Difference
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="leg.html">Current Legislation</a>
+              <a href="#">Other Organizations</a>
+              <a href="#">What Next?</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">About
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="team.html">Meet the Team</a>
-                    <a href="#">About the Project</a>
-                    <a href="#">Map Instructions</a>
-                </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">About
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="team.html">Meet the Team</a>
+              <a href="#">About the Project</a>
+              <a href="#">Map Instructions</a>
             </div>
+          </div>
         </div>
-    </div>
 
     <div class="content">
         <h1 style="text-align: center;">Hi, We're the Ocean Pollution Posse.</h1> <br>
@@ -63,7 +62,7 @@
         <h3>I'm Eli and I will be the web specialist for our team.
              I will be managing the functionality of our site, writing and reviewing code, 
              and helping out the team with other aspects of the project as needed.</h3>
-        </div>>
+        </div>
         <div class="clearfix">
         <img align="left" style = "float: left; margin: 15px;" width="200" src="../photos/IMG_2368.jpg">
         <h3>Hello! I'm Derek and I will be the UX designer for our team.
