--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -31,10 +31,10 @@
 
   <div class="header">
     <div class="navbar">
-      <a href="home.html">Home</a>
+      <a href="../home.html">Home</a>
       <a href="micro.html">Microplastics</a>
-      <a href="page3.html">Map</a>
-      <a href="vessel.html">Fishing Vessels</a>
+      <a href="data.html">Data</a>
+      <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
       <div class="dropdown">
         <button class="dropbtn">Make a Difference
           <i class="fa fa-caret-down"></i>
@@ -56,11 +56,10 @@
         </div>
       </div>
     </div>
-  </div>
 
   <div class="title">
-    <p style="text-align: center; font-size: 40px;font-family: sans-serif; font-weight: bold;">
-      Presence of Fishing Vessels
+    <p style="text-align: center; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
+      Presence of fishing vessels and major plastic pollution
     </p>
   </div>
 
@@ -102,7 +101,7 @@
   </div>
 
   <div class="text">
-    <p style="margin: 20px; font-size: 20px; font-family: sans-serif;background-color: aliceblue; margin-bottom: 20px;">
+    <p style="margin: 20px; font-size: 20px; font-family: sans-serif; background-color: rgb(17, 22, 22); margin-bottom: 20px; color: cadetblue;">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
       vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est,
