--- a/pages/data.html
+++ b/pages/data.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>home page</title>
+  <title>data</title>
   <meta charset="utf-8" />
 
   <!-- style sheets -->
-  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/data.css">
 
 
   <!-- jquery -->
@@ -19,10 +19,10 @@
 
   <div class="header">
     <div class="navbar">
-      <a href="home.html">Home</a>
+      <a href="../home.html">Home</a>
       <a href="micro.html">Microplastics</a>
-      <a href="page3.html">Map</a>
-      <a href="vessel.html">Fishing Vessels</a>
+      <a href="data.html">Data</a>
+      <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
       <div class="dropdown">
         <button class="dropbtn">Make a Difference
           <i class="fa fa-caret-down"></i>
@@ -48,7 +48,7 @@
 
   <div class="content">
 
-    <!-- <div class='tableauPlaceholder' id='viz1619934658697' style='position: relative'>
+    <div class='tableauPlaceholder' id='viz1619934658697' style='position: relative'>
       <noscript><a href='#'><img alt='Map and Graphs by Year '
             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;6F&#47;6FishingBoatsVisualized2012-2020&#47;MapandGraphsbyYear&#47;1_rss.png'
             style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -77,22 +77,7 @@
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script> -->
-  </div>
-
-  <div class="sidebar">
-    <h1>Home Page</h1>
-    <p>Some text for the home page
-      etc etc etc etc etc etc etc etc etc
-    </p>
-    <br>
-    <button class="button" type="button">Get Started</button>
-  </div>
-  <div class="content">
-
-  </div>
-  <div class="footer">
-
+    </script>
   </div>
 
   <script src="../js/home.js"></script>
