--- a/pages/home.html
+++ b/pages/home.html
@@ -21,8 +21,8 @@
     <div class="navbar">
       <a href="home.html">Home</a>
       <a href="micro.html">Microplastics</a>
-      <a href="page3.html">Map</a>
-      <a href="vessel.html">Fishing Vessels</a>
+      <a href="data.html">Data</a>
+      <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
       <div class="dropdown">
         <button class="dropbtn">Make a Difference
           <i class="fa fa-caret-down"></i>
