--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -31,7 +31,7 @@
 
   <div class="header">
     <div class="navbar">
-      <a href="../home.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="micro.html">Microplastics</a>
       <a href="data.html">Data</a>
       <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
