--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -20,6 +20,8 @@
   <!-- papaparse-->
   <script src="../js/papaparse.min.js"></script>
 
+  <script  src="../js/vessel.js"></script>
+
 
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
