--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -25,7 +25,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script  src="../js/vessel.js"></script>
 
 </head>
 
@@ -99,7 +98,7 @@
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);</script> -->
-    <div id="map"></div>
+    <div id="map">    <script  src="../js/vessel.js"></script> </div>
   </div>
 
   <div class="text">
@@ -113,7 +112,7 @@
       Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
     </p>
   </div>
-  <script  src="../js/vessel.js"></script>
+  <!-- <script  src="../js/vessel.js"></script> -->
 
 </body>
 
