--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -98,7 +98,7 @@
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);</script> -->
-    <div id="map">    <script  src="../js/vessel.js"></script> </div>
+    <div id="map"> </div>
   </div>
 
   <div class="text">
