--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -112,7 +112,7 @@
       Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
     </p>
   </div>
-  <!-- <script  src="../js/vessel.js"></script> -->
+  <script  src="../js/vessel.js"></script>
 
 </body>
 
