--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -59,7 +59,7 @@
     </div>
 
   <div class="title">
-    <p style="text-align: center; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
+    <p style="text-align: center; margin-bottom: 50px; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
       Presence of fishing vessels and major plastic pollution
     </p>
   </div>
