add country names

--- a/pages/team.html
+++ b/pages/team.html
@@ -72,7 +72,7 @@
         </div>
         
         <h2 style="text-align: center;">Project Overview</h2>
-        <h3>In recent years, individuals have been switching out their water bottles and plastic bags
+        <h3 id="overview">In recent years, individuals have been switching out their water bottles and plastic bags
              for resuable alternatives. More and more people are aware of their personal impact on the
               environment and actively work to minimize their carbon footprint. 
         
