--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -103,13 +103,7 @@
 
   <div class="text">
     <p style="margin: 20px; font-size: 20px; font-family: sans-serif; background-color: rgb(17, 22, 22); margin-bottom: 20px; color: cadetblue;">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
-      vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est,
-      ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum
-      augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis
-      in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue.
-      Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
+          Our maps can be navigated by zoomin in/out by clicking the +/-, and by grab & holding the map to change viewing locations. To show data on the map, click the “Layers” icon on the top right to filter data as needed.
     </p>
   </div>
   <script  src="../js/vessel.js"></script>
