--- a/pages/vessel.html
+++ b/pages/vessel.html
@@ -103,7 +103,7 @@
 
   <div class="text">
     <p style="margin: 20px; font-size: 20px; font-family: sans-serif; background-color: rgb(17, 22, 22); margin-bottom: 20px; color: cadetblue;">
-          Our maps can be navigated by zoomin in/out by clicking the +/-, and by grab & holding the map to change viewing locations. To show data on the map, click the “Layers” icon on the top right to filter data as needed.
+          Our maps can be navigated by zooming in/out by clicking the +/- or by clicking on a cluster, and by grab & holding the map to change viewing locations. To show data on the map, click the “Layers” icon on the top right to filter data as needed.
     </p>
   </div>
   <script  src="../js/vessel.js"></script>
