--- a/Group_Assignment_3/index.html
+++ b/Group_Assignment_3/index.html
@@ -24,7 +24,7 @@
 <body>
 
 	<div class="header">
-		Plastic Pollution World Cloropleth
+		Choropleth Map of Worldwide Plastic Pollution
 	</div>
 	<div class="sidebar">
 		
