--- a/Group_Assignment_3/index.html
+++ b/Group_Assignment_3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> <!-- add libraries to the head --> 
-	<title>World Cloropleth</title>
+	<title>World Plastic Pollution Cloropleth</title>
 	<meta charset="utf-8" />
 
 	<!-- style sheets -->
