--- a/v3 GA4/index.html
+++ b/v3 GA4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>US in Poverty</title>
+	<title>Mismanaged Plastic Waste in 2010</title>
 	<meta charset="utf-8" />
 
 	<!-- style sheets -->
