--- a/v3 GA4/index.html
+++ b/v3 GA4/index.html
@@ -29,13 +29,13 @@
 <body>
 
 	<div class="header">
-		The US in Poverty
+		Total Mismanaged Plastic Waste in 2010
 	</div>
 	<div class="sidebar"></div>
 	<div class="content">
 		<div id="map"></div>
 	</div>
-	<div class="dashboard"></div>
+	<div class="dashboard"> Hover on a continent to learn who are the top five contributors to mismanaged plastic waste.  </div>
 	<div class="footer"></div>
 
 	<script src="js/map.js"></script>
