--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/start.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
