--- a/pages/home.html
+++ b/pages/home.html
@@ -81,11 +81,11 @@
   </div>
 
   <div class="sidebar">
-    <h1>We often led to believe that our individual consumption habits are the driving force of plastic pollution.  </h1>
-    <p>However, data reveals that the fishing industry is responsible for the greatest amount of pollution. It is up to fishing industry to better regulate fishing practices and protocol to truly allow for our oceans to heal.
+    <h1 style = "margin-top:200px; margin-left: 200px; margin-right: 200px; margin-bottom:30px; font-size: 4em;">We often led to believe that our individual consumption habits are the driving force of plastic pollution.  </h1>
+    <p style = "margin-top:0 px; margin-left: 200px; margin-right: 200px; margin-bottom:50px; font-size: 1.5em;"> However, data reveals that the fishing industry is responsible for the greatest amount of pollution. It is up to fishing industry to better regulate fishing practices and protocol to truly allow for our oceans to heal.
     </p>
     <br>
-   <!-- <button class="button" type="button">Get Started</button>-->
+   <button class="button" type="button">Get Started</button>
   </div>
   <div class="content">
 
