--- a/pages/home.html
+++ b/pages/home.html
@@ -81,8 +81,8 @@
   </div>
 
   <div class="sidebar">
-    <h1 style = "margin-top:200px; margin-left: 200px; margin-right: 200px; margin-bottom:30px; font-size: 4em;">We often led to believe that our individual consumption habits are the driving force of plastic pollution.  </h1>
-    <p style = "margin-top:0 px; margin-left: 200px; margin-right: 200px; margin-bottom:50px; font-size: 1.5em;"> However, data reveals that the fishing industry is responsible for the greatest amount of pollution. It is up to fishing industry to better regulate fishing practices and protocol to truly allow for our oceans to heal.
+    <h1 style = "margin-top:320px; margin-left: 10em; margin-right: 10em; margin-bottom:30px; font-size: 3em;"> Are richer countries polluting our oceans with plastic at a greater rate? </h1>
+    <p style = "margin-top:0 px; margin-left: 20em; margin-right: 20em; margin-bottom:50px; font-size: 1.5em;"> Team Ocean Pollution Posse visualizes 2010 data to further explore if countries with higher GDP contribute more towards plastic waste mismanagement.  
     </p>
     <br>
    <button class="button" type="button"> Get Started</button>
