change to propositions and css

--- a/pages/leg.html
+++ b/pages/leg.html
@@ -31,7 +31,7 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="leg.html">Current Legislation</a>
+              <a href="leg.html">Propositions</a>
               <a href="#">Other Organizations</a>
               <a href="#">What Next?</a>
             </div>
@@ -51,43 +51,35 @@
 
     <div class="content">
         <p style="text-align: center; font-size: 80px;  font-family: 'Montserrat', sans-serif;
-        font-weight: 800; letter-spacing: -4px; margin-top: 70px;">Current Legislation
+        font-weight: 800; letter-spacing: -2px; margin-top: 70px; color: rgb(0, 38, 88);"> Propositions
         </p> <br>
         <div class="clearfix">
         
             <img src="../photos/bill.png" style="float: left; width: 40%; border-radius: 10px; margin-left: 200px; margin-right: 50px; margin-bottom:100px">
-            <p style = "margin-right: 100px; text-align: left; font-size: 30px;text-indent: 150px;">   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
-            vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est,
-            ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum
-            augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis
-            in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue.
-            Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
-          </p>
+            <p style = "color: rgb(46, 58, 129); font-family: 'Montserrat'; margin-right: 100px; margin-top:100px; text-align: center; font-size: 50px; font-weight: 400;"> 
+              We ask all <br> CORPORATIONS to...
+             </p>
+             <p style = "margin-right: 5em; margin-left: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
+                ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
+             </p>
         </div><hr>
        <div class="clearfix">
             <img src="../photos/bill.png" style="float: right; width:40%; border-radius: 10px; margin: 10px;  margin-right: 200px; margin-bottom:100px; ">
-            <p style = "margin-left: 200px; margin-top: 100px;  margin-right: 100px; text-align: left; font-size: 30px; text-indent: 150px;"> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
-            vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est,
-            ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum
-            augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis
-            in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue.
-            Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
-            </p>
+            <p style = "color: rgb(46, 58, 129); font-family: 'Montserrat'; margin-left: 100px; margin-right: 21em; margin-top:100px; text-align: center; font-size: 50px; font-weight: 400;"> 
+              We ask all <br> GOVERNMENTS to...
+             </p>
+             <p style = "margin-left: 5em; margin-right: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
+                ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
+             </p>
         </div><hr>
         <div class="clearfix">
         
           <img src="../photos/bill.png" style="float: left; width:40%; border-radius: 10px; margin-top: 0px; margin-left: 200px; margin-right: 50px; margin-bottom:50px">
-          <p style = "margin-right: 100px; margin-top:100px; text-align: left; font-size: 30px; text-indent: 150px;"> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,
-            vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est,
-            ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum
-            augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis
-            in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue.
-            Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
+          <p style = "color: rgb(46, 58, 129); font-family: 'Montserrat'; margin-right: 100px; margin-top:100px; text-align: center; font-size: 50px; font-weight: 400;"> 
+           We ask YOU to...
+          </p>
+          <p style = "margin-right: 5em; margin-left: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
+             ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
           </p>
         </div>
     </div>
