--- a/pages/team.html
+++ b/pages/team.html
@@ -23,7 +23,7 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="leg.html">Current Legislation</a>
+              <a href="leg.html">Propositions</a>
               <a href="#">Other Organizations</a>
               <a href="#">What Next?</a>
             </div>
