--- a/pages/home.html
+++ b/pages/home.html
@@ -81,12 +81,12 @@
   </div>
 
   <div class="sidebar">
-    <h1 style="margin-top:320px; margin-left: 10em; margin-right: 10em;
-       margin-bottom:30px; font-size: 3em;">
+    <h1 style="margin-top:20%; margin-left: 25%; margin-right: 25%;
+       margin-bottom:30px; font-size: 300%;">
       Are wealthier countries polluting our oceans with plastic
       at a higher rate? </h1>
-    <p style="margin-top:0 px; margin-left: 20em;
-       margin-right: 20em; margin-bottom:50px; font-size: 1.5em;">
+    <p style="margin-top:0 px; margin-left: 25%;
+       margin-right: 25%; margin-bottom:50px; font-size: 150%;">
       Team Ocean Pollution Posse visualizes 2010 data to further
       explore if countries with higher GDP contribute more toward
       plastic waste mismanagement.
