--- a/pages/leg.html
+++ b/pages/leg.html
@@ -51,7 +51,7 @@
 
     <div class="content">
         <p style="text-align: center; font-size: 80px;  font-family: 'Montserrat', sans-serif;
-        font-weight: 800; letter-spacing: -2px; margin-top: 70px; color: rgb(0, 38, 88);"> Propositions
+        font-weight: 800; letter-spacing: -2px; margin-top: 100px; margin-bottom: -10px; color: rgb(0, 38, 88);"> Propositions
         </p> <br>
         <div class="clearfix">
         
