format home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -81,7 +81,7 @@
   </div>
 
   <div class="sidebar">
-    <h1 style="margin-top:20%; margin-left: 25%; margin-right: 25%;
+    <h1 style="margin-left: 25%; margin-right: 25%;
        margin-bottom:30px; font-size: 300%;">
       Are wealthier countries polluting our oceans with plastic
       at a higher rate? </h1>
